--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,10 +4,16 @@ body {
 
 /*achtergrond*/
 main {
+    background-color: #3f92b6;
     background-image: url("https://pleasurable-ui-p9p8.onrender.com/assets/house-mouse.svg");
     width: 100vw;
     height: 100vh;
     background-size: cover;
+    line-height: 1.5;
+    display: grid;
+    gap: 2em;
+
+
 }
 
 /* .today{
@@ -19,19 +25,9 @@ main {
 
 /*tekstballon*/
 .wolkje {
-    position: absolute;
-    top: 14em;
-    left: 37vw;
     background-color: rgb(255, 255, 255);
     padding: 1.5em;
     height: 8.5em;
-
-
-    /* border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;  */
-
 
     clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 50% 80%, 55% 100%, 31% 80%, 0 80%);
 
@@ -39,17 +35,11 @@ main {
 
 /*kruisje*/
 .kruisje {
-    position: absolute;
-    left: 18em;
-    top: .7em;
     background-color: rgb(255, 255, 255);
 }
 
 /*button let's do it*/
 .lessons {
-    position: absolute;
-    left: 5em;
-    bottom: 3.5em;
     background-color: rgb(134, 97, 169);
     color: rgb(255, 255, 255);
     font-size: 15px;
@@ -63,17 +53,13 @@ main {
 
 /*muis*/
 .muis {
-    position: absolute;
-    bottom: 0px;
-    top: 25em;
-    left: 40vw;
+  grid-template-rows: auto auto auto auto; 
+  row-gap: 3em;
 }
 
 /*button menu*/
 .menu {
-    position: absolute;
-    bottom: 2em;
-    right: 3em;
+ 
 }
 
 /*button menu*/
@@ -94,4 +80,22 @@ p {
     font-size: 15px;
     padding: .2em;
     font-weight: bold;
+   
 }
+
+
+@media (min-width: 450px) {
+
+    main{
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto auto;
+
+    }
+
+    .muis{
+        grid-row: 2;
+        grid-column: 2;
+    }
+    
+    /* … */
+  }
