--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,12 +6,14 @@ body {
 main {
     background-color: #3f92b6;
     background-image: url("https://pleasurable-ui-p9p8.onrender.com/assets/house-mouse.svg");
-    width: 100vw;
     height: 100vh;
     background-size: cover;
     line-height: 1.5;
     display: grid;
     gap: 2em;
+    padding-top: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
 
 
 }
@@ -31,11 +33,14 @@ main {
 
     clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 50% 80%, 55% 100%, 31% 80%, 0 80%);
 
+    width: 205px;
+
 }
 
 /*kruisje*/
 .kruisje {
     background-color: rgb(255, 255, 255);
+    
 }
 
 /*button let's do it*/
@@ -43,6 +48,7 @@ main {
     background-color: rgb(134, 97, 169);
     color: rgb(255, 255, 255);
     font-size: 15px;
+    
 
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -59,7 +65,9 @@ main {
 
 /*button menu*/
 .menu {
- 
+    grid-template-rows: auto auto auto auto; 
+    row-gap: 3em;
+    ;
 }
 
 /*button menu*/
@@ -69,9 +77,15 @@ button {
 }
 
 .hamburger{
-    border-radius: 50%;
     width: 5em;
     height: 5em;
+}
+
+.streepje{
+    background-color: rgb(36, 36, 36);
+    border-radius: 50%;
+    width: 2.5em;
+    height: 2.5em;
 }
 
 /*tekst in tekstballon*/
@@ -80,7 +94,6 @@ p {
     font-size: 15px;
     padding: .2em;
     font-weight: bold;
-   
 }
 
 
@@ -96,6 +109,15 @@ p {
         grid-row: 2;
         grid-column: 2;
     }
+
+    .wolkje{
+        grid-column: 2;
+    }
     
     /* … */
+  }
+
+  @media (min-width: 700px){
+
+
   }
