--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    padding: 0px;
 }
 
 /*achtergrond*/
@@ -14,15 +15,7 @@ main {
     padding-top: 25px;
     padding-left: 15px;
     padding-right: 15px;
-
-
 }
-
-/* .today{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
 
 
 /*tekstballon*/
@@ -34,21 +27,21 @@ main {
     clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 50% 80%, 55% 100%, 31% 80%, 0 80%);
 
     width: 205px;
-
 }
+
 
 /*kruisje*/
 .kruisje {
     background-color: rgb(255, 255, 255);
-    
 }
+
 
 /*button let's do it*/
 .lessons {
     background-color: rgb(134, 97, 169);
     color: rgb(255, 255, 255);
     font-size: 15px;
-    
+
 
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -59,34 +52,25 @@ main {
 
 /*muis*/
 .muis {
-  grid-template-rows: auto auto auto auto; 
-  row-gap: 3em;
-}
-
-/*button menu*/
-.menu {
-    grid-template-rows: auto auto auto auto; 
+    grid-template-rows: auto auto auto auto;
     row-gap: 3em;
-    ;
 }
 
-/*button menu*/
+
+/*button kruisje*/
 button {
-    background-color: rgb(36, 36, 36);
     border: none;
 }
 
-.hamburger{
-    width: 5em;
-    height: 5em;
-}
 
-.streepje{
+/*menu*/
+.streepje {
     background-color: rgb(36, 36, 36);
     border-radius: 50%;
-    width: 2.5em;
-    height: 2.5em;
+    width: 3.5em;
+    height: 3.5em;
 }
+
 
 /*tekst in tekstballon*/
 p {
@@ -99,36 +83,58 @@ p {
 
 @media (min-width: 450px) {
 
-    main{
+    main {
         grid-template-columns: auto auto auto auto auto;
         grid-template-rows: auto auto auto auto;
-
     }
 
-    .muis{
+    .muis {
         grid-row: 2;
         grid-column: 2;
     }
 
-    .wolkje{
-        grid-column: 2;
+    .wolkje {
+        grid-row: 3;
+        grid-column: 1;
+        align-self:end;
     }
-    
-    /* … */
-  }
 
-  @media (min-width: 700px){
+    .streepje {
+        width: 2.5em;
+        height: 2.5em;
+    }
+}
 
-    .muis{
+
+
+@media (min-width: 700px) {
+
+    main {
+        grid-template-columns: auto auto auto auto auto;
+        grid-template-rows: auto auto auto auto;
+    }
+
+    .muis {
         grid-row: 3;
         grid-column: 3;
     }
 
-   .wolkje{
-    grid-row: 2;
-    grid-column: 3;
-    margin: -1em;
-    margin-top: 5em;
-   }
+    .wolkje {
+        grid-row: 2;
+        grid-column: 3;
+        margin: -1em;
+        margin-top: 5em;
+    }
 
-  }
+    .menu {
+        grid-row: 4;
+        grid-column: 5;
+        justify-self: end;
+    }
+
+    .streepje{
+        width: 3.5em;
+        height: 3.5em;
+    }
+
+}
