--- a/styles/menu.css
+++ b/styles/menu.css
@@ -4,6 +4,11 @@ body{
     margin: 0px
 }
 
+main{
+    display: grid;
+    gap: 2em;
+}
+
 p{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
