--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,6 +41,7 @@ main {
     background-color: rgb(134, 97, 169);
     color: rgb(255, 255, 255);
     font-size: 15px;
+  
 
 
     border-top-left-radius: 5px;
@@ -96,13 +97,62 @@ p {
     .wolkje {
         grid-row: 3;
         grid-column: 1;
-        align-self:end;
+        align-self: end;
+
     }
 
     .streepje {
         width: 2.5em;
         height: 2.5em;
     }
+}
+
+
+@media (min-width: 500px){
+
+    .muis{
+        grid-column: 1;
+        margin-left: 5em;
+    }
+
+    .wolkje{
+    justify-self: center;
+    margin-left: -2em;
+    }
+
+    .menu{
+        grid-row: 2;
+        margin-right: 1em;  
+    }
+}
+
+
+@media (min-width: 600px) {
+
+    main {
+        grid-template-columns: auto auto auto auto auto;
+        grid-template-rows: auto auto auto auto;
+    }
+
+    .muis {
+        grid-row: 3;
+        grid-column: 1;
+        justify-self: start;
+    }
+
+    .wolkje {
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    .menu {
+        grid-row: 3;
+        grid-column: 3;
+        align-self: center;
+        justify-self: center;
+        margin-bottom: -12em;
+    }
+
 }
 
 
@@ -132,9 +182,63 @@ p {
         justify-self: end;
     }
 
-    .streepje{
+    .streepje {
         width: 3.5em;
         height: 3.5em;
     }
 
+}
+
+
+
+@media (min-width: 800px) {
+
+    .menu {
+        grid-row: 3;
+    }
+}
+
+
+@media (max-width: 800px) {
+
+    main {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto auto;
+    }
+
+    .muis {
+        grid-row: 2;
+        justify-self: center;
+        align-self: end;
+    }
+
+    .wolkje {
+        grid-row: 1;
+        align-self: end;
+        margin-bottom: -5em;
+    }
+
+    .menu {
+        justify-self: end;
+        align-self: end;
+        margin-bottom: -5em;
+    }
+
+}
+
+
+@media (min-width: 900px) {
+
+    .menu {
+        grid-row: 3;
+        grid-column: 5;
+        align-self: center;
+        justify-self: center;
+
+    }
+
+    .wolkje{
+        justify-self: start;
+        margin-left: 4em;
+    }
 }
