--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,31 +1,76 @@
-
-body{
-    background-color:rgb(36, 36, 36);
+body {
+    background-color: rgb(36, 36, 36);
     margin: 0px
 }
 
-main{
+main {
     display: grid;
     gap: 2em;
 }
 
-p{
-    font-family: Arial, Helvetica, sans-serif;
+h2 {
+    font-family: Verdana, Tahoma, sans-serif;
     font-size: 15px;
     color: rgb(255, 255, 255);
+    font-weight: normal;
 
 }
 
-
-.menu{
-    display:grid;
+.menu {
+    display: grid;
     grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto auto auto;
+    justify-items: center;
 
 }
 
+.home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #3f92b6;
+    grid-row: 3;
+    width: 8em;
+}
+
+.testing {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #599ae7;
+    grid-row: 3;
+    width: 8em;
+}
+
+.lessons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #954be2;
+    grid-row: 4;
+    width: 8em;
+}
+
+.statistics {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #06a192;
+    grid-row: 4;
+    width: 8em;
+}
+
+.profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fd8c73;
+    grid-row: 5;
+    width: 8em;
+}
 
 
-button{
+button {
     background-color: rgb(255, 255, 255);
     border: none;
     border-radius: 50%;
@@ -37,8 +82,9 @@ button{
 }
 
 
-svg{
+svg {
     width: 30px;
     height: 30px;
 }
 
+@media (min-width: 450px) {}
