--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,7 +43,7 @@ main {
     font-size: 20px;
     text-decoration: none;
     padding: .2em;
-  
+
 
 
     border-top-left-radius: 5px;
@@ -76,7 +76,7 @@ button {
 
 
 /*tekst in tekstballon*/
-p {
+h1{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     padding: .2em;
@@ -84,9 +84,75 @@ p {
 }
 
 
+@media (min-width:300px) {
+
+    .main {
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto auto;
+    }
+
+    .muis {
+        grid-column: 1;
+        grid-row: 2;
+        justify-self: center;
+    }
+
+    .wolkje {
+        grid-column: 1;
+        grid-row: 1;
+        margin-top: 2em;
+        margin-left: 2em;
+    }
+
+    .menu {
+        grid-column: 1;
+        grid-row: 3;
+        justify-self: end;
+        margin-right: 1em;
+    }
+}
+
+@media (min-width:400px) {
+
+    .main {
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto auto;
+    }
+
+    .muis {
+        grid-column: 1;
+        grid-row: 2;
+        justify-self: center;
+    }
+
+    .wolkje {
+        grid-column: 1;
+        grid-row: 1;
+        align-self: end;
+    }
+
+    .menu {
+        grid-column: 1;
+        grid-row: 3;
+        justify-self: end;
+        margin-right: 1em;
+        align-self: end;
+        margin-bottom: 1em;
+    }
+}
 
 
-@media (min-width: 450px) {
+
+
+
+
+
+
+
+
+
+
+/* @media (min-width: 450px) {
 
     main {
         grid-template-columns: auto auto auto auto auto;
@@ -109,10 +175,10 @@ p {
         width: 3em;
         height: 3em;
     }
-}
+} */
 
 /* dimensions: surface duo*/
-@media (min-width: 500px){
+/* @media (min-width: 500px){
 
     .muis{
         grid-column: 1;
@@ -128,12 +194,12 @@ p {
         grid-row: 2;
         margin-right: 1em;  
     }
-}
+} */
 
 
 
 /*tablet*/
-@media (min-width: 700px) {
+/* @media (min-width: 700px) {
 
     main {
         grid-template-columns: auto auto auto auto auto;
@@ -167,11 +233,11 @@ p {
     .lessons{
         margin-left: 1em;
     }
-}
+} */
 
 
 
-@media (max-width: 800px) {
+/* @media (max-width: 800px) {
 
     main {
         grid-template-columns: auto;
@@ -195,10 +261,10 @@ p {
         align-self: end;
         margin-bottom: -5em;
     }
-}
+} */
 
 
-
+/* 
 @media (min-width: 900px) {
 
     .menu {
@@ -215,7 +281,7 @@ p {
         justify-self: start;
         margin-left: 4em;
     }
-}
+} */
 
 
 
@@ -268,7 +334,7 @@ p {
 } */
 
 
- /* @media (max-width: 1000px){
+/* @media (max-width: 1000px){
 
     .menu{
         align-self: center;
@@ -309,7 +375,7 @@ p {
 }
 } */
 
- /* @media (max-width: 1300px) {
+/* @media (max-width: 1300px) {
 
 .wolkje{
     margin-left: -3em;
@@ -329,5 +395,3 @@ p{
     font-size: 25px;
 }
 }   */
-
-
