--- a/styles/menu.css
+++ b/styles/menu.css
@@ -31,6 +31,10 @@ h2 {
     background-color: #3f92b6;
     grid-row: 3;
     width: 8em;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .testing {
@@ -40,6 +44,11 @@ h2 {
     background-color: #599ae7;
     grid-row: 3;
     width: 8em;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
 }
 
 .lessons {
@@ -49,6 +58,10 @@ h2 {
     background-color: #954be2;
     grid-row: 4;
     width: 8em;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .statistics {
@@ -58,6 +71,10 @@ h2 {
     background-color: #06a192;
     grid-row: 4;
     width: 8em;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .profile {
@@ -67,6 +84,10 @@ h2 {
     background-color: #fd8c73;
     grid-row: 5;
     width: 8em;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 
