--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,9 +12,8 @@ main {
     line-height: 1.5;
     display: grid;
     gap: 2em;
-    /* padding-top: 25px;
-    padding-left: 15px;
-    padding-right: 15px; */
+   padding: 1em;
+   
 }
 
 
@@ -23,6 +22,7 @@ main {
     background-color: rgb(255, 255, 255);
     padding: 1.5em;
     height: 8.5em;
+    margin-left: 2em;
 
     clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 50% 80%, 55% 100%, 31% 80%, 0 80%);
 
@@ -44,8 +44,6 @@ main {
     text-decoration: none;
     padding: .2em;
 
-
-
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -55,9 +53,9 @@ main {
 
 /*muis*/
 .muis {
-    grid-template-rows: auto auto auto auto;
+    /* grid-template-rows: auto auto auto auto;   */
     row-gap: 3em;
-}
+} 
 
 
 /*button kruisje*/
@@ -83,36 +81,36 @@ h1{
     font-weight: bold;
 }
 
+.info{
+    width: 320px;
+    margin: 0 auto;
+}
 
-@media (min-width:300px) {
 
-    .main {
-        grid-template-columns: auto auto;
-        grid-template-rows: auto auto auto;
-    }
 
-    .muis {
-        grid-column: 1;
-        grid-row: 2;
-        justify-self: center;
-    }
 
-    .wolkje {
-        grid-column: 1;
-        grid-row: 1;
-        margin-top: 2em;
-        margin-left: 2em;
-    }
 
-    .menu {
+
+
+
+
+
+
+
+
+/* @media (min-width:300px){
+    .menu{
         grid-column: 1;
         grid-row: 3;
         justify-self: end;
-        margin-right: 1em;
+        margin-right: 2em;
+        align-self: center;
     }
-}
 
-@media (min-width:400px) {
+}  */
+
+
+ /* @media (min-width:350px) {
 
     .main {
         grid-template-columns: auto auto;
@@ -129,6 +127,8 @@ h1{
         grid-column: 1;
         grid-row: 1;
         align-self: end;
+        margin-top: 2em;
+        margin-left: 2em;
     }
 
     .menu {
@@ -139,7 +139,7 @@ h1{
         align-self: end;
         margin-bottom: 1em;
     }
-}
+}  */
 
 
 
@@ -149,249 +149,3 @@ h1{
 
 
 
-
-
-
-/* @media (min-width: 450px) {
-
-    main {
-        grid-template-columns: auto auto auto auto auto;
-        grid-template-rows: auto auto auto auto;
-    }
-
-    .muis {
-        grid-row: 2;
-        grid-column: 2;
-    }
-
-    .wolkje {
-        grid-row: 3;
-        grid-column: 1;
-        align-self: end;
-
-    }
-
-    .streepje {
-        width: 3em;
-        height: 3em;
-    }
-} */
-
-/* dimensions: surface duo*/
-/* @media (min-width: 500px){
-
-    .muis{
-        grid-column: 1;
-        margin-left: 5em;
-    }
-
-    .wolkje{
-    justify-self: center;
-    margin-left: -2em;
-    }
-
-    .menu{
-        grid-row: 2;
-        margin-right: 1em;  
-    }
-} */
-
-
-
-/*tablet*/
-/* @media (min-width: 700px) {
-
-    main {
-        grid-template-columns: auto auto auto auto auto;
-        grid-template-rows: auto auto auto auto;
-    }
-
-    .muis {
-        grid-row: 3;
-        grid-column: 3;
-    }
-
-    .wolkje {
-        grid-row: 2;
-        grid-column: 3;
-        margin: -1em;
-        margin-top: 5em;
-    }
-
-    .menu {
-        grid-row: 4;
-        grid-column: 5;
-        justify-self: end;
-
-    }
-
-    .streepje {
-        width: 3.5em;
-        height: 3.5em;
-    }
-
-    .lessons{
-        margin-left: 1em;
-    }
-} */
-
-
-
-/* @media (max-width: 800px) {
-
-    main {
-        grid-template-columns: auto;
-        grid-template-rows: auto auto auto auto;
-    }
-
-    .muis {
-        grid-row: 2;
-        justify-self: center;
-        align-self: end;
-    }
-
-    .wolkje {
-        grid-row: 1;
-        align-self: end;
-        margin-bottom: -5em;
-    }
-
-    .menu {
-        justify-self: end;
-        align-self: end;
-        margin-bottom: -5em;
-    }
-} */
-
-
-/* 
-@media (min-width: 900px) {
-
-    .menu {
-        grid-row: 3;
-        grid-column: 5;
-        align-self: center;
-        justify-self: end;
-      margin-right: 3em;
-      margin-top: 4em;
-
-    }
-
-    .wolkje{
-        justify-self: start;
-        margin-left: 4em;
-    }
-} */
-
-
-
-
-
-
-/* 
-@media (min-width: 350px){
-
-    .wolkje{
-        margin-left: 3em;
-        margin-top: 4em;
-    }
-} */
-
-
-/* @media (min-width: 600px) {
-
-    main {
-        grid-template-columns: auto auto auto auto auto;
-        grid-template-rows: auto auto auto auto;
-    }
-
-    .muis {
-        grid-row: 3;
-        grid-column: 1;
-        justify-self: start;
-    }
-
-    .wolkje {
-        grid-row: 2;
-        grid-column: 1;
-    }
-
-    .menu {
-        grid-row: 3;
-        grid-column: 3;
-        align-self: center;
-        justify-self: center;
-        margin-bottom: -12em;
-    }
-} */
-
-
-/* @media (min-width: 800px) {
-
-    .menu {
-        grid-row: 3;
-    }
-} */
-
-
-/* @media (max-width: 1000px){
-
-    .menu{
-        align-self: center;
-        margin-bottom: -2em;
-    }
-
-    .wolkje{
-        margin-bottom: -11em;
-    }
-
-    .muis{
-        margin-bottom: -7em;
-    }
-} */
-
-/* @media (max-width: 1100px) {
-
-.wolkje{
-    grid-row: 1;
-    margin-bottom: -19em;
-    margin-left: -6em;
-}
-
-.muis{
-    margin-bottom: -18em;
-    margin-left: 1em;
-}
-
-.menu{
-    grid-row: 4;
-    margin-bottom: -6em;
-    margin-right: 1.5em;
-}
-
-.streepje{
-    width: 4em;
-    height: 4em;
-}
-} */
-
-/* @media (max-width: 1300px) {
-
-.wolkje{
-    margin-left: -3em;
-    width: 18em;
-    height: 12em;
-}
-
-.streepje{
-    width: 4.5em;
-    height: 4.5em;
-}
-p{
-    font-size: 20px;
-}
-
-.lessons{
-    font-size: 25px;
-}
-}   */
