--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,6 +1,9 @@
 body {
     background-color: rgb(36, 36, 36);
-    margin: 0px
+    margin: 0px;
+    height: 100dvh;
+    display: grid;
+    grid-template-rows: 1fr max-content;
 }
 
 main {
@@ -21,6 +24,7 @@ h2 {
     grid-template-columns: auto auto;
     grid-template-rows: auto auto auto auto auto;
     justify-items: center;
+    align-self: center;
 
 }
 
@@ -30,7 +34,9 @@ h2 {
     align-items: center;
     background-color: #3f92b6;
     grid-row: 3;
-    width: 8em;
+    width: 7em;
+    height: 5em;
+    margin-right: -3em;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -43,7 +49,9 @@ h2 {
     align-items: center;
     background-color: #599ae7;
     grid-row: 3;
-    width: 8em;
+    width: 7em;
+    height: 5em;
+    margin-left: -3em;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -57,7 +65,9 @@ h2 {
     align-items: center;
     background-color: #954be2;
     grid-row: 4;
-    width: 8em;
+    width: 7em;
+    height: 5em;
+    margin-right: -3em;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -70,7 +80,9 @@ h2 {
     align-items: center;
     background-color: #06a192;
     grid-row: 4;
-    width: 8em;
+    width: 7em;
+    height: 5em;
+    margin-left: -3em;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -83,7 +95,9 @@ h2 {
     align-items: center;
     background-color: #fd8c73;
     grid-row: 5;
-    width: 8em;
+    width: 7em;
+    height: 5em;
+    margin-right: -3em;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -91,10 +105,13 @@ h2 {
 }
 
 
-.footer{
+footer{
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-rows: auto;
+    align-self: end;
+    margin-bottom: 2em;
+
 
 }
 
@@ -104,6 +121,9 @@ button {
     border-radius: 50%;
     width: 5em;
     height: 5em;
+    grid-column: 2;
+    justify-self: end;
+    margin-right: 2em; 
  
 }
 
