--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,9 @@ main {
 /*kruisje*/
 .kruisje {
     background-color: rgb(255, 255, 255);
+    position: absolute;
+    margin-left: 14em;
+    margin-top: -6em;
 }
 
 
@@ -44,6 +47,7 @@ main {
     font-size: 20px;
     text-decoration: none;
     padding: .2em;
+    margin-left: 2.5em;
 
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -96,68 +100,6 @@ h1{
     margin-right: 1em;
     margin-bottom: 1em;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* @media (min-width:300px){
-    .menu{
-        grid-column: 1;
-        grid-row: 3;
-        justify-self: end;
-        margin-right: 2em;
-        align-self: center;
-    }
-
-}  */
-
-
- /* @media (min-width:350px) {
-
-    .main {
-        grid-template-columns: auto auto;
-        grid-template-rows: auto auto auto;
-    }
-
-    .muis {
-        grid-column: 1;
-        grid-row: 2;
-        justify-self: center;
-    }
-
-    .wolkje {
-        grid-column: 1;
-        grid-row: 1;
-        align-self: end;
-        margin-top: 2em;
-        margin-left: 2em;
-    }
-
-    .menu {
-        grid-column: 1;
-        grid-row: 3;
-        justify-self: end;
-        margin-right: 1em;
-        align-self: end;
-        margin-bottom: 1em;
-    }
-}  */
-
-
-
-
-
-
 
 
 
