--- a/styles/menu.css
+++ b/styles/menu.css
@@ -43,6 +43,7 @@ h2 {
     border-bottom-right-radius: 10px;
 }
 
+
 .testing {
     display: flex;
     flex-direction: column;
@@ -56,8 +57,8 @@ h2 {
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-
 }
+
 
 .lessons {
     display: flex;
@@ -104,8 +105,18 @@ h2 {
     border-bottom-right-radius: 10px;
 }
 
+.home:hover {
+    cursor: auto;
+}
 
-footer{
+section:hover {
+    border: .5px solid white;
+    filter: brightness(120%);
+}
+
+
+/*button kruisje onderin plaatsing*/
+footer {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto;
@@ -115,6 +126,7 @@ footer{
 
 }
 
+/*button kruisje onderin plaatsing en grootte*/
 button {
     background-color: rgb(255, 255, 255);
     border: none;
@@ -123,11 +135,12 @@ button {
     height: 5em;
     grid-column: 2;
     justify-self: end;
-    margin-right: 2em; 
- 
+    margin-right: 1.7em;
+    margin-bottom: -.8em;
+
 }
 
-
+/*alle img in de section*/
 svg {
     width: 30px;
     height: 30px;
@@ -135,6 +148,7 @@ svg {
     padding-top: .2em;
 }
 
-a{
+
+a {
     margin-bottom: -.4em;
 }
