--- a/styles/menu.css
+++ b/styles/menu.css
@@ -21,8 +21,8 @@ h2 {
 
 .menu {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: 1fr 1fr;
+    /* grid-template-rows: auto; */
     justify-items: center;
     align-self: center;
 
