--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,3 +122,23 @@ li {
     margin-right: 1em;
     margin-bottom: 1em;
 }
+
+
+/*wolkje na 12 uur 's nachts*/
+.moved-down {
+    transform: translateY(-.8em); /* Pas de waarde aan voor meer of minder verschuiving */
+    transition: transform 0.5s ease; /* Voegt een animatie toe voor de beweging */
+}
+
+.goodnight-message {
+    display: none; /* Standaard verbergen */
+    margin-top: -1.5em; /* Optionele marge */
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.purple {
+    color: purple; /* Stel de kleur in op paars */
+    font-size: 17px;
+}
