--- a/styles/menu.css
+++ b/styles/menu.css
@@ -20,9 +20,7 @@ h2 {
 }
 
 .menu {
-    display: grid;
     grid-template-columns: 1fr 1fr;
-    /* grid-template-rows: auto; */
     justify-items: center;
     align-self: center;
 
@@ -33,7 +31,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     background-color: #3f92b6;
-    grid-row: 3;
+    grid-column: 1;
     width: 7em;
     height: 5em;
     margin-right: -3em;
@@ -49,7 +47,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     background-color: #599ae7;
-    grid-row: 3;
+    grid-column: 2;
     width: 7em;
     height: 5em;
     margin-left: -3em;
@@ -65,7 +63,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     background-color: #954be2;
-    grid-row: 4;
+    grid-column: 1;
     width: 7em;
     height: 5em;
     margin-right: -3em;
@@ -80,7 +78,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     background-color: #06a192;
-    grid-row: 4;
+    grid-column: 2;
     width: 7em;
     height: 5em;
     margin-left: -3em;
@@ -95,7 +93,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     background-color: #fd8c73;
-    grid-row: 5;
+    grid-column: 1;
     width: 7em;
     height: 5em;
     margin-right: -3em;
