--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,115 @@ body {
     height: 100vh;
 }
 
+/* START MENU  */
+
+header {
+    position: absolute;
+    z-index: 9;
+    top: -100%;
+
+    height:100dvh;
+    margin: 0px;
+    background-color: rgb(36, 36, 36);
+    /* height: 100dvh; */
+    transition: transform 0.4s ease-out;
+}
+
+header.is-active {
+    transform: translateY(100%);
+}
+
+.menu-list { /* <ul> */
+    display: grid;
+    gap: 2em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr max-content;
+    justify-items: center;
+    align-self: center;
+    padding: 0 3rem;
+}
+.menu li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    width: 100%;
+    grid-column: 1;
+    &:hover {
+        border: .5px solid white;
+        filter: brightness(120%);
+    }
+}
+.menu a {
+    display: block;
+    margin-bottom: 0;
+    /* width: 7em;
+    height: 5em; */
+}
+.menu .lessons {
+    background-color: #954be2;
+}
+.menu .home {
+    background-color: #3f92b6;
+}
+.menu .testing {
+    background-color: #599ae7;
+    grid-column: 2;
+}
+.menu .statistics {
+    background-color: #06a192;
+    grid-column: 2;
+}
+.menu .profile {
+    background-color: #fd8c73;
+}
+.menu .lessons-nav {
+    background-color: rgb(134, 97, 169);
+}
+
+h2 {
+    font-family: Verdana, Tahoma, sans-serif;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    font-weight: normal;
+}
+
+
+
+.menu-trigger {
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    z-index: 10;
+    padding: 0;
+    border: 0;
+    background: none;
+}
+
+.menu-trigger .open {
+    display: none;
+
+}
+
+/*alle img in de section*/
+header svg {
+    width: 30px;
+    height: 30px;
+    margin-top: .3em;
+    padding-top: .2em;
+}
+
+a {
+    margin-bottom: -.4em;
+}
+
+/* EINDE MENU */
+
+
+
+/*START HOME*/
+
 /*achtergrond*/
 main {
     background-color: #3f92b6;
@@ -48,19 +157,7 @@ main {
 
 
 /*button let's do it in de tekstballon*/
-.lessons {
-    background-color: rgb(134, 97, 169);
-    color: rgb(255, 255, 255);
-    font-size: 20px;
-    text-decoration: none;
-    padding: .2em;
-    margin-left: 2.5em;
 
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
 
 
 /*button kruisje*/
@@ -107,25 +204,6 @@ span{
     height: 3.5em;
 }
 
-
-/*hamburger menu*/
-li {
-    list-style-type: none;
-    margin-right: 1em;
-    margin-bottom: -1em;
-}
-
-
-/*hamburger menu plaatsing*/
-.menu {
-    grid-row: 3;
-    justify-self: end;
-    align-self: end;
-    margin-right: 1em;
-    margin-bottom: 1em;
-} 
-
-
 /*wolkje na 12 uur 's nachts*/
 .moved-down {
     transform: translateY(-.8em); /* Pas de waarde aan voor meer of minder verschuiving */
@@ -147,3 +225,25 @@ li {
     font-size: 17px;
 }
 
+/*EINDE HOME*/
+
+
+
+
+
+/*hamburger menu*/
+/* li {
+    list-style-type: none;
+    margin-right: 1em;
+    margin-bottom: -1em;
+} */
+
+
+/*hamburger menu plaatsing*/
+ /* .menu {
+    grid-row: 3;
+    justify-self: end;
+    align-self: end;
+    margin-right: 1em;
+    margin-bottom: 1em;
+}   */
