--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,13 +28,9 @@ header.is-active {
     flex-direction: column;
     justify-content: center;
     height: 97vh;
-    /* display: grid; */
     gap: 2em;
-    /* grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr max-content; */
     justify-items: center;
-    /* align-self: center; */
-    padding: 0 3rem;
+    padding: 0 4rem;
 
 }
 
@@ -272,7 +268,7 @@ span {
     margin: 0 auto;
     grid-row: 2;
     align-self: end;
-    margin-bottom: -4em;
+    margin-top: -3em;
 }
 
 
